--- a/0.Programing Basics - Course/05.Loops/15.SmartLilly/15.SmartLilly.csproj
+++ b/0.Programing Basics - Course/05.Loops/15.SmartLilly/15.SmartLilly.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5300C9D5-0148-45F8-82FF-92098CCA3A14}</ProjectGuid>
+    <ProjectGuid>{01039DCD-122F-420A-87A6-370CC32BCB6D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_18.Pairs</RootNamespace>
-    <AssemblyName>18.Pairs</AssemblyName>
+    <RootNamespace>_15.SmartLilly</RootNamespace>
+    <AssemblyName>15.SmartLilly</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="15.SmartLilly.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
