--- a/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/04.BasicQueueOperations/04.BasicQueueOperations.csproj
+++ b/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/04.BasicQueueOperations/04.BasicQueueOperations.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DCF688F-440D-4C7D-9EB0-027A2B512CA4}</ProjectGuid>
+    <ProjectGuid>{8B40C83F-7C3E-4911-B25C-0EC0C8E2F95E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03.MaximumElement</RootNamespace>
-    <AssemblyName>03.MaximumElement</AssemblyName>
+    <RootNamespace>_04.BasicQueueOperations</RootNamespace>
+    <AssemblyName>04.BasicQueueOperations</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03.MaximumElement.cs" />
+    <Compile Include="04.BasicQueueOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
