--- a/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/06.TruckTour/06.TruckTour.csproj
+++ b/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/06.TruckTour/06.TruckTour.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DCF688F-440D-4C7D-9EB0-027A2B512CA4}</ProjectGuid>
+    <ProjectGuid>{C2A56ACF-B1BC-46D9-994A-EFB92E09BC41}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03.MaximumElement</RootNamespace>
-    <AssemblyName>03.MaximumElement</AssemblyName>
+    <RootNamespace>_06.TruckTour</RootNamespace>
+    <AssemblyName>06.TruckTour</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03.MaximumElement.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
