--- a/03 - C# Advanced/01.Stacks And Queues/08.RecursiveFibonacci/08.RecursiveFibonacci.csproj
+++ b/03 - C# Advanced/01.Stacks And Queues/08.RecursiveFibonacci/08.RecursiveFibonacci.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2A56ACF-B1BC-46D9-994A-EFB92E09BC41}</ProjectGuid>
+    <ProjectGuid>{84AEB0CD-F668-479E-9A13-655E9CDE3CC6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_06.TruckTour</RootNamespace>
-    <AssemblyName>06.TruckTour</AssemblyName>
+    <RootNamespace>_08.RecursiveFibonacci</RootNamespace>
+    <AssemblyName>08.RecursiveFibonacci</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="08.RecursiveFibonacci.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
