--- a/03 - C# Advanced/04.File Streams/02.Line Numbers/02.Line Numbers.csproj
+++ b/03 - C# Advanced/04.File Streams/02.Line Numbers/02.Line Numbers.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1F357BF-7D28-475B-9943-EB364C741C3A}</ProjectGuid>
+    <ProjectGuid>{2B9F0666-2A93-43A8-8DB2-F17E7CFDDF54}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_01.Odd_Lines</RootNamespace>
-    <AssemblyName>01.Odd Lines</AssemblyName>
+    <RootNamespace>_02.Line_Numbers</RootNamespace>
+    <AssemblyName>02.Line Numbers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Odd Lines.cs" />
+    <Compile Include="Line Numbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
