C# OOP Basics - Inheritance -  *Refactoring

--- a/04 - C# OOP Basics/03.Inheritance/06.Animals/06.Animals.csproj
+++ b/04 - C# OOP Basics/03.Inheritance/06.Animals/06.Animals.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <Compile Include="Models\Dog.cs" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
