C# OOP Basics - Exam - 25 August 2016 - Add Bonus Task - Castration Center

--- a/04 - C# OOP Basics/Exam - 25 August 2016/Paws Inc/Paws Inc.csproj
+++ b/04 - C# OOP Basics/Exam - 25 August 2016/Paws Inc/Paws Inc.csproj
@@ -48,8 +48,10 @@
     <Compile Include="Models\Animals\Dog.cs" />
     <Compile Include="Models\Centers\AdoptionCenter.cs" />
     <Compile Include="Models\Center.cs" />
+    <Compile Include="Models\Centers\CastrationCenter.cs" />
     <Compile Include="Models\Centers\CleansingCenter.cs" />
     <Compile Include="Core\Engine.cs" />
+    <Compile Include="Models\TreatmentCenter.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
