--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,9 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+# Custom Ignore Dirs
+Minedraft-Bonus/
+Minedraft-Buisness-Logic/
+Minedraft-Structure-Tests/
+
