--- a/05 - C# OOP Advanced/03.Iterators and Comparators - Lab/01.Library/01.Library.csproj
+++ b/05 - C# OOP Advanced/03.Iterators and Comparators - Lab/01.Library/01.Library.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CE243FC0-CE9A-4252-8446-9C600638D36A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_01.Library</RootNamespace>
-    <AssemblyName>_01.Library</AssemblyName>
+    <AssemblyName>01.Library</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
+    <Compile Include="BookComparator.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
