C# OOP Advanced - Enums and Attributes - Custom Attribute

--- a/05 - C# OOP Advanced/04.Enumeration and Attributes/11.Inferno Infinity/11.Inferno Infinity.csproj
+++ b/05 - C# OOP Advanced/04.Enumeration and Attributes/11.Inferno Infinity/11.Inferno Infinity.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContributionAttribute.cs" />
     <Compile Include="Entities\Gem.cs" />
     <Compile Include="Entities\Gems\Amethyst.cs" />
     <Compile Include="Entities\Gems\Emerald.cs" />
