--- a/05 - C# OOP Advanced/05.Reflection/03.BarracksFactory/03.BarracksFactory.csproj
+++ b/05 - C# OOP Advanced/05.Reflection/03.BarracksFactory/03.BarracksFactory.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppEntryPoint.cs" />
+    <Compile Include="Attributes\Inject.cs" />
     <Compile Include="Contracts\IAttacker.cs" />
     <Compile Include="Contracts\ICommandInterpreter.cs" />
     <Compile Include="Contracts\IDestroyable.cs" />
